# bridge_twin

./: .gitignore  README.md  bridge.glb  consentium.py  index.html  main.py  pyproject.toml  requirements.txt  server.py
css/: style.css
data/: bridge_health_report.txt
data/test_files/: sample_document.txt
data/vector_store/: chroma.sqlite3
data/vector_store/5a17df75-2f8e-451d-ba0a-9dbad3311520/: index_metadata.pickle
data/vector_store/70e62f5f-b8a5-40ac-b240-08ecd65698a6/: index_metadata.pickle
js/: chat.js  config.js  deformation.js  loader.js  main.js  sensors.js  ui.js
notebook/: doc.ipynb  doc1.ipynb
pages/: detail.html
rag/: pipeline.py
